# Rovi2-Project

./: .gitignore  CMakeLists.txt  README.md
Old_code/: LuaGenerator.cpp  LuaGenerator.hpp  Utilities.cpp  Utilities.hpp  findPathWithEpsilon.cpp  findPathWithEpsilon.hpp  pathplanning.cpp
RobworkStudio_plugin/: CMakeLists.txt
RobworkStudio_plugin/src/: SamplePlugin.cpp  SamplePlugin.hpp  SamplePlugin.ui  SocketCommunication.cpp  SocketCommunication.hpp
Workcell3/: WC3_Scene.wc.xml
catkin_ws/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
catkin_ws/devel/lib/obstacle_avoidance/: obstacle_avoidance_move_robstudio_node  obstacle_avoidance_planner_node
catkin_ws/devel/lib/pkgconfig/: obstacle_avoidance.pc
catkin_ws/devel/share/obstacle_avoidance/cmake/: obstacle_avoidanceConfig.cmake
catkin_ws/src/obstacle_avoidence/: CMakeLists.txt  package.xml
catkin_ws/src/obstacle_avoidence/src/: move_robstudio_node.cpp  planner_node.cpp
libs/SocketCommunication/: SocketCommunication.cpp  SocketCommunication.hpp
libs/test_projects/RRT/: CMakeLists.txt
libs/test_projects/RRT/src/: EdgeCollisionDetectors.cpp  EdgeCollisionDetectors.hpp  RRT.cpp  RRT.hpp  main.cpp
libs/test_projects/rw_socket_client/: CMakeLists.txt
libs/test_projects/rw_socket_client/src/: FindPath.cpp  FindPath.hpp  LuaGenerator.hpp  ObstacleAvoidance.cpp  ObstacleAvoidance.hpp  PathPlanner_ALTO.cpp  PathPlanner_ALTO.hpp  SocketCommunication.cpp  SocketCommunication.hpp  Testbench.cpp  Testbench.hpp  Todo  Transport.cpp  Transport.hpp  ball.txt  ball_path.txt  ball_spiral.txt  interpolated_mainpath.txt  main.cpp  main_path.txt  main_path3.txt  main_path4.txt  main_path_in_col.txt
src/: FindPath.cpp  FindPath.hpp  LuaGenerator.cpp  LuaGenerator.hpp  main.cpp  obstacle_lua_example
